// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`character component matches snapshot of ennemy attacking 1`] = `
<div
  class="character w-50 container"
  data-testid="character"
>
  <div
    class="flex-row-reverse row"
  >
    <div
      class="col"
    >
      <div
        class="justify-content-center row"
        data-testid="attacking"
      >
        <div
          class="spinner-grow spinner-grow-sm text-danger"
        />
      </div>
      <div
        class="justify-content-center row"
      >
        <div
          class="w-50 progress"
          data-testid="health-bar"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            class="progress-bar bg-success progress-bar-animated progress-bar-striped"
            role="progressbar"
          />
        </div>
      </div>
      <p>
        children
      </p>
    </div>
    <div
      class="col"
      data-testid="dice"
    >
      <div
        class="justify-content-center pt-4 row"
        data-testid="dice"
      >
        <img
          class="undefined"
          data-testid="value"
          style="width: 70px;"
        />
      </div>
      <div
        class="justify-content-center pt-4 row"
        data-testid="dice"
      >
        <img
          class="undefined"
          data-testid="value"
          style="width: 70px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`character component matches snapshot of player not attacking 1`] = `
<div
  class="character w-50 container"
  data-testid="character"
>
  <div
    class="false row"
  >
    <div
      class="col"
    >
      <div
        class="justify-content-center row"
      >
        <div
          class="w-50 progress"
          data-testid="health-bar"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            class="progress-bar bg-success progress-bar-animated progress-bar-striped"
            role="progressbar"
          />
        </div>
      </div>
      <p>
        children
      </p>
    </div>
    <div
      class="col"
      data-testid="dice"
    >
      <div
        class="justify-content-center pt-4 row"
        data-testid="dice"
      >
        <img
          class="undefined"
          data-testid="value"
          style="width: 70px;"
        />
      </div>
      <div
        class="justify-content-center pt-4 row"
        data-testid="dice"
      >
        <img
          class="undefined"
          data-testid="value"
          style="width: 70px;"
        />
      </div>
    </div>
  </div>
</div>
`;
